k8s/disaster-recovery-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    name: velero
---
apiVersion: v1
kind: Namespace
metadata:
  name: backup
  labels:
    name: backup
---
apiVersion: v1
kind: Namespace
metadata:
  name: recovery
  labels:
    name: recovery
